--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChangePassword"
-    android:background="@color/light_gray">
+    android:background="#2E86C1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +43,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:id="@+id/edit_change_pass"
                 android:layout_below="@id/txtView_current_pass"
                 android:hint="Enter your password"
@@ -105,7 +105,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:id="@+id/edit_change_pass_new"
                 android:layout_below="@id/txtView_change_pass_new"
                 android:hint="Enter your new password*"
@@ -129,7 +129,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:id="@+id/edit_confirm_pass_new"
                 android:layout_below="@id/txtView_confirm_pass_new"
                 android:hint="Confirm your password"
