--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,71 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/swipeContainer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForgotPassword"
     android:background="@drawable/mainbg">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:background="@drawable/border">
+        android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:orientation="vertical"
+            android:background="#2E86C1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Forgot your Password?"
+                android:layout_marginTop="30dp"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:id="@+id/txt_reset_head"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Please enter your registered email to recieve password reset link"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
+                android:id="@+id/txt_reset_menu"
+                android:textColor="@color/black"/>
+        </LinearLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Please enter your registered email to recieve password reset link"
-            android:layout_marginTop="30dp"
-            android:textAlignment="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:id="@+id/txt_reset_head"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/txt_reset_email"
-            android:layout_below="@id/txt_reset_head"
-            android:text="Email*"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="-50dp"
+            android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:padding="6dp"
-            android:textSize="16dp"
-            android:textColor="@color/black"/>
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/border"
+            android:padding="15dp">
 
-        <EditText
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/reset_email"
-            android:layout_below="@id/txt_reset_email"
-            android:hint="Enter your registered email"
-            android:inputType="textEmailAddress"
-            android:layout_marginLeft="15dp"
-            android:padding="6sp"
-            android:textSize="16sp"
-            android:background="@drawable/border"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/RLemail"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/border">
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn_resetPass"
-            android:layout_below="@id/reset_email"
-            android:layout_marginTop="50dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"
-            android:text="Reset Password"
-            android:backgroundTint="@color/red"/>
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:id="@+id/imageViewEmail"
+                    android:src="@drawable/ic_email"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"/>
 
-        <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="?android:attr/progressBarStyleLarge"
-            android:id="@+id/progressBar"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:elevation="10dp"
-            android:visibility="gone"/>
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/text_reset_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="6dp"
+                    android:text="Email"
+                    android:textColor="@color/black"
+                    android:layout_toEndOf="@+id/imageViewEmail"/>
+
+                <View
+                    android:layout_width="250dp"
+                    android:layout_height="1dp"
+                    android:id="@+id/divider_email"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/text_reset_email"
+                    android:background="@android:color/darker_gray"/>
+
+
+                <EditText
+                    android:id="@+id/reset_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_below="@id/text_reset_email"
+                    android:background="@android:color/transparent"
+                    android:layout_toEndOf="@+id/imageViewEmail"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:hint="Enter email"
+                    android:textColorHint="#CA9E93"
+                    android:inputType="textEmailAddress"
+                    android:padding="6dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+            </RelativeLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/btn_resetPass"
+                android:layout_below="@id/RLemail"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="70dp"
+                android:layout_marginRight="70dp"
+                android:layout_marginBottom="20dp"
+                android:text="Reset Password"
+                android:backgroundTint="@color/red"/>
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/progressBarStyleLarge"
+                android:id="@+id/progressBar"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:elevation="10dp"
+                android:visibility="gone"/>
+        </RelativeLayout>
+
+    </LinearLayout>
 </ScrollView>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
