--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:padding="15dp"
-        android:background="@drawable/border">
+        android:background="@drawable/mainborder">
         
         <ImageView
             android:layout_width="wrap_content"
