--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,188 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileActivity"
-    android:background="@color/light_gray">
+    android:id="@+id/swipeContainer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        tools:context=".ProfileActivity"
+        android:background="@color/white">
 
-        <RelativeLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="#5CC09F">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/image_dp"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_centerInParent="true"
-                android:background="@drawable/no_profile_pic" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/show_welcome"
-                android:layout_below="@id/image_dp"
-                android:hint="Loading....."
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="5dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:textColor="@color/black"/>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp"
-            android:layout_margin="15dp"
-            android:background="@color/white">
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:id="@+id/icon_profile"
-                android:background="@drawable/ic_profile"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/userName"
-                android:layout_alignStart="@+id/icon_profile"
-                android:hint="Loading"
-                android:layout_marginStart="50dp"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
-
-            <View
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/userName"
-                android:background="@android:color/darker_gray"
-                android:id="@+id/divider_name"/>
+                android:layout_height="250dp"
+                android:background="#2E86C1">
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:id="@+id/icon_email"
-                android:background="@drawable/ic_email"
-                android:layout_below="@+id/divider_name"
-                android:layout_marginTop="20dp"/>
+                <ImageView
+                    android:id="@+id/image_dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/no_profile_pic" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/userEmail"
-                android:layout_alignStart="@+id/icon_email"
-                android:hint="Loading"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/divider_name"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/show_welcome"
+                    android:layout_below="@id/image_dp"
+                    android:hint="Loading....."
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="5dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                    android:textColor="@color/black"/>
+            </RelativeLayout>
 
-            <View
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/userEmail"
-                android:background="@android:color/darker_gray"
-                android:id="@+id/divider_email"/>
+                android:layout_height="match_parent"
+                android:padding="15dp"
+                android:layout_margin="15dp"
+                android:background="@color/white">
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:id="@+id/icon_birth"
-                android:background="@drawable/ic_birthday"
-                android:layout_below="@+id/divider_email"
-                android:layout_marginTop="20dp"/>
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:id="@+id/icon_profile"
+                    android:background="@drawable/ic_profile"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/userBirth"
-                android:layout_alignStart="@+id/icon_birth"
-                android:hint="Loading"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/divider_email"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userName"
+                    android:layout_alignStart="@+id/icon_profile"
+                    android:hint="Loading"
+                    android:layout_marginStart="50dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/userBirth"
-                android:background="@android:color/darker_gray"
-                android:id="@+id/divider_birth"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/userName"
+                    android:background="@android:color/darker_gray"
+                    android:id="@+id/divider_name"/>
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:id="@+id/icon_gender"
-                android:background="@drawable/ic_gender"
-                android:layout_below="@+id/divider_birth"
-                android:layout_marginTop="20dp"/>
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:id="@+id/icon_email"
+                    android:background="@drawable/ic_email"
+                    android:layout_below="@+id/divider_name"
+                    android:layout_marginTop="20dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/userGender"
-                android:layout_alignStart="@+id/icon_gender"
-                android:hint="Loading"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/divider_birth"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userEmail"
+                    android:layout_alignStart="@+id/icon_email"
+                    android:hint="Loading"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/divider_name"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/userGender"
-                android:background="@android:color/darker_gray"
-                android:id="@+id/divider_gender"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/userEmail"
+                    android:background="@android:color/darker_gray"
+                    android:id="@+id/divider_email"/>
 
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:id="@+id/icon_mobile"
-                android:background="@drawable/ic_mobile"
-                android:layout_below="@+id/divider_gender"
-                android:layout_marginTop="20dp"/>
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:id="@+id/icon_birth"
+                    android:background="@drawable/ic_birthday"
+                    android:layout_below="@+id/divider_email"
+                    android:layout_marginTop="20dp"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/userMobile"
-                android:layout_alignStart="@+id/icon_mobile"
-                android:hint="Loading"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_below="@id/divider_gender"
-                android:textSize="18sp"
-                android:textColor="@color/black"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userBirth"
+                    android:layout_alignStart="@+id/icon_birth"
+                    android:hint="Loading"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/divider_email"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"/>
 
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/progressBarStyleLarge"
-                android:id="@+id/progressBar"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:elevation="10dp"
-                android:visibility="gone"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/userBirth"
+                    android:background="@android:color/darker_gray"
+                    android:id="@+id/divider_birth"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:id="@+id/icon_gender"
+                    android:background="@drawable/ic_gender"
+                    android:layout_below="@+id/divider_birth"
+                    android:layout_marginTop="20dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userGender"
+                    android:layout_alignStart="@+id/icon_gender"
+                    android:hint="Loading"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/divider_birth"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/userGender"
+                    android:background="@android:color/darker_gray"
+                    android:id="@+id/divider_gender"/>
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:id="@+id/icon_mobile"
+                    android:background="@drawable/ic_mobile"
+                    android:layout_below="@+id/divider_gender"
+                    android:layout_marginTop="20dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/userMobile"
+                    android:layout_alignStart="@+id/icon_mobile"
+                    android:hint="Loading"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_below="@id/divider_gender"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"/>
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="?android:attr/progressBarStyleLarge"
+                    android:id="@+id/progressBar"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:elevation="10dp"
+                    android:visibility="gone"/>
 
 
-        </RelativeLayout>
-    </LinearLayout>
-</ScrollView>
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
