--- a/app/src/main/res/layout/activity_update_email.xml
+++ b/app/src/main/res/layout/activity_update_email.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UpdateEmail"
-    android:background="@color/light_gray">
+    android:background="#2E86C1">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/border"
             android:padding="15dp"
             android:layout_margin="15dp"
             android:id="@+id/rl_email">
@@ -63,7 +63,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:id="@+id/edit_update_email_verify"
                 android:layout_below="@id/txtView_update_email_verify"
                 android:hint="Enter your password"
@@ -98,7 +98,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/border"
             android:layout_margin="15dp"
             android:padding="15dp"
             android:layout_below="@id/rl_email">
@@ -125,7 +125,7 @@
 
             <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:id="@+id/edit_update_email_new"
                 android:layout_below="@id/txtView_update_email_new"
                 android:hint="Enter your new email"
