--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".RegisterActivity"
-    android:background="@color/light_gray">
+    android:background="#2E86C1">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             android:id="@+id/register_head"
             android:layout_marginTop="30dp"
             android:textColor="@color/black"
-            android:text="Registration Deets"
+            android:text="Registration Details"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/register_name"
             android:layout_below="@id/register_head"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="30dp"
             android:textColor="@color/defaultGray"
             android:padding="6dp"
             android:textSize="16sp"
@@ -36,9 +36,10 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:id="@+id/edit_name"
             android:hint="Enter your full name"
+            android:textColorHint="#CA9E93"
             android:inputType="textPersonName"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -59,9 +60,10 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:id="@+id/edit_email"
             android:hint="Enter your email"
+            android:textColorHint="#CA9E93"
             android:inputType="textEmailAddress"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -82,9 +84,10 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:id="@+id/edit_birth"
             android:hint="Select your date of birth"
+            android:textColorHint="#CA9E93"
             android:inputType="date"
             android:focusable="false"
             android:textSize="16sp"
@@ -145,9 +148,10 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:id="@+id/edit_mobile"
             android:hint="Enter your mobile number"
+            android:textColorHint="#CA9E93"
             android:inputType="phone"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -168,9 +172,10 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:id="@+id/edit_password"
             android:hint="Enter your password"
+            android:textColorHint="#CA9E93"
             android:inputType="textPassword"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -191,9 +196,10 @@
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:id="@+id/edit_confirm"
             android:hint="Confirm your password"
+            android:textColorHint="#CA9E93"
             android:inputType="textPassword"
             android:textSize="16sp"
             android:textColor="@color/black"
