--- a/app/src/main/res/menu/common_menu.xml
+++ b/app/src/main/res/menu/common_menu.xml
@@ -4,9 +4,7 @@
 
     <item android:title="Refresh"
         android:icon="@drawable/ic_refresh_white"
-        android:orderInCategory="1"
-        android:id="@+id/menu_refresh"
-        app:showAsAction="ifRoom"/>
+        android:id="@+id/menu_refresh" />
 
     <item android:title="Home"
         android:id="@+id/menu_home"/>
